# blacky

./: .gitignore  CMakeLists.txt  Dockerfile  Jugador.h  LICENSE  README.md  blacky.cpp  blacky.h  commands.sh  conanfile.py  docker-compose.yml  main.cpp  menu.h  tools.cpp  tools.h
apps/: main.cpp
includes/: Carta.h  Jugador.h  Mazo.h  app.h  blacky.h  menu.h  tools.h
profiles/: default
src/: Carta.cpp  Carta.h  Jugador.cpp  Mazo.cpp  Mazo.h  blacky.cpp  main.cpp  main.h  menu.h  tools.cpp
